# backend/docs/swagger.yaml
@@ -134,8 +134,12 @@ definitions:
         type: string
       photo_url:
         type: string
+      place_of_birth:
+        type: string
       rating:
         type: number
+      religion:
+        type: string
       reviews:
         items:
           $ref: '#/definitions/models.Review'
@@ -213,6 +217,41 @@ info:
   title: AGAZH API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint logs in either a housekeeper or employer and generates
+        a JWT token
+      parameters:
+      - description: Login credentials
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginCredentials'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.TokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Logs in a user and generates a JWT token
+      tags:
+      - auth
   /create-hiring:
     post:
       consumes:
@@ -535,41 +574,6 @@ paths:
       summary: Retrieves a list of housekeepers based on filter criteria
       tags:
       - housekeeper
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint logs in either a housekeeper or employer and generates
-        a JWT token
-      parameters:
-      - description: Login credentials
-        in: body
-        name: credentials
-        required: true
-        schema:
-          $ref: '#/definitions/models.LoginCredentials'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.TokenResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: Logs in a user and generates a JWT token
-      tags:
-      - auth
   /register-employer:
     post:
       consumes:
